# koala

./: .gitattributes  .gitignore  .gitmodules  Package.swift  README.md  package.swift
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  documentation.md  documentation.yml  feature_request.md
.github/workflows/: android-appcenter.yml  android-browserstack.yml  android-demos.yml  android-devicefarm.yml  android-perf.yml  android-upload.yml  c-codestyle.yml  c-demos.yml  ios-appcenter.yml  ios-browserstack.yml  ios-demos.yml  ios-devicefarm.yml  ios-perf.yml  ios-validate.yml  link-check.yml  python-codestyle.yml  python-demos.yml  python-perf.yml  python.yml  spell-check.yml  swift-codestyle.yml  web-codestyle.yml  web-demos.yml  web-perf.yml  web.yml
binding/android/: README.md  build.gradle  settings.gradle
binding/ios/: Koala-iOS.podspec  Koala.swift  KoalaErrors.swift  README.md
binding/python/: .gitignore  README.md  __init__.py  _factory.py  _koala.py  _util.py  koala.py  setup.py  test_koala.py  test_koala_perf.py  util.py
binding/web/: .eslintrc.js  .gitignore  .npmignore  .prettierignore  README.md  cypress.config.ts  module.d.ts  package.json  rollup.config.js  tsconfig.json  vite.config.ts
demo/android/: README.md
demo/c/: CMakeLists.txt  README.md  koala_demo_file.c  koala_demo_mic.c
demo/c/test/: test_koala_c.py
demo/ios/: README.md
demo/python/: .gitignore  README.md  koala_demo_file.py  koala_demo_mic.py  requirements.txt  setup.py
demo/web/: .gitignore  README.md  eslint.config.mjs  index.html  (+1 more)
include/: picovoice.h  pv_koala.h
(+110 files in other folders)
